Made a few changes to T6 to get the bibliography to show up

--- a/T6_credentials.tex
+++ b/T6_credentials.tex
@@ -25,7 +25,7 @@
 
 \section{\label{sec:pre}Prerequisites}
 \begin{itemize}
-\item StochSS 1.4 (or later) installed on your computer (please follow download and installation instructions at \url{www.stochss.org}). 
+\item StochSS 1.6 (or later) installed on your computer (please follow download and installation instructions at \url{www.stochss.org}). 
 \item A basic understanding of well mixed discrete stochastic simulations and models based on ordinary differential equations \cite{dan,sundials}.
 \item A basic knowledge of the mesoscopic reaction-diffusion master equation and of the next sub volume method \cite{nsm}.
 \item  A basic knowledge of the functionalities in the StochSS GUI (please consult the \textit{Basic Introduction to StochSS} tutorial).
@@ -52,7 +52,7 @@ An example will be shown to you on how to validate your credentials in StochSS t
 \begin{figure}[!ht]
 \centering
 \includegraphics[scale=0.45]{T6_fig_credentials.png}
-\caption{'Cloud Computing' page - 'Credentials' section}
+\caption{`Cloud Computing' page - `Credentials' section}
 \label{fig:2}
 \end{figure}
 
@@ -162,5 +162,23 @@ An example shown below will guide you on how to analyze the cost of reproduce an
 \item If the running is \textcolor{blue}{'finished'}, the time and money cost of running the job with the node type you chose will be plotted in the graph below for comparison.
 \end{itemize}
 
+
+\begin{thebibliography}{9}
+  
+  \bibitem{dan}
+  D.T. Gillespie.
+  \textit{Exact stochastic simulation of coupled chemical reactions}.
+  J. Phys. Chem., 81(25), 2340-2361 (1977)
+
+  \bibitem{sundials}
+  A. C. Hindmarsh et al.,
+  \textit{SUNDIALS: Suite of nonlinear and differential/algebraic equation solvers}.
+  ACM Trans. Math. Softw., 31(3), 363-396 (2005)
+  
+  \bibitem{nsm}
+  J. Elf and M. Ehrenberg,
+  \textit{Spontaneous separation of bi-stable biochemical systems into spatial domains of opposite phases} IEEE Systems Biology, 1, 230Ð6 (2004)
+  
+\end{thebibliography}
 
 \end{document}
