Changed a few quotes

--- a/T6_credentials.tex
+++ b/T6_credentials.tex
@@ -57,10 +57,10 @@ An example will be shown to you on how to validate your credentials in StochSS t
 \end{figure}
 
 \begin{itemize}
-\item \textbf{Navigate} to the main \textcolor{blue}{Cloud Computing} page by \textbf{clicking} the 'Cloud Computing' on the side bar.
-\item \textbf{Type in} or \textbf{copy} the access key id of your credentials in \textcolor{blue}{'Access Key'} text box.
+\item \textbf{Navigate} to the main \textcolor{blue}{Cloud Computing} page by \textbf{clicking} the `Cloud Computing' on the side bar.
+\item \textbf{Type in} or \textbf{copy} the access key id of your credentials in \textcolor{blue}{`Access Key'} text box.
  \item \textbf{Type in} or \textbf{copy} the secret access key of your credentials in \textcolor{blue}{`Secret Key'} text box. 
- \item \textbf{Click} on the \textcolor{blue}{'Save credentials'} button to save your credentials into the database. Whenever there is no computing node running (the nodes can be seen in the 'Status of VMs' section down the same page) with your current credentials, you could always change your credentials to another and save to restore them.
+ \item \textbf{Click} on the \textcolor{blue}{`Save credentials'} button to save your credentials into the database. Whenever there is no computing node running (the nodes can be seen in the `Status of VMs' section down the same page) with your current credentials, you could always change your credentials to another and save to restore them.
  \item \textbf{Double check} the credentials are valid by seeing the message below.
 
 \end{itemize}
