--- a/T6_credentials.tex
+++ b/T6_credentials.tex
@@ -25,12 +25,13 @@
 
 \section{\label{sec:pre}Prerequisites}
 \begin{itemize}
-\item StochSS 1.6 (or later) installed on your computer (please follow download and installation instructions at \url{www.stochss.org}). 
+\item StochSS 1.5 (or later) installed on your computer (please follow download and installation instructions at \url{www.stochss.org}). 
 \item A basic understanding of well-mixed discrete stochastic simulations and models based on ordinary differential equations \cite{dan,sundials}.
-\item A basic knowledge of the reaction-diffusion master equation and of the next sub volume method (NSM) \cite{nsm}.
+\item A basic knowledge of the reaction-diffusion master equation and of the next sub volume method (NSM) \cite{nsm}
 \item  A basic knowledge of the functionalities in the StochSS GUI (please consult the \textit{Basic Introduction to StochSS} tutorial).
 \item The following login screen appears in your browser; please log in.
 \end{itemize}
+
 
 \begin{figure}[!ht]
 \centering
@@ -40,27 +41,27 @@
 \newpage
 
 \section{Credentials}
-StochSS provides the options to run different types of jobs using the cloud infrastructures. In StochSS 1.2-1.5, the cloud services it has are all by Amazon Web Service (AWS). In order to use AWS Elastic Computing Cloud (EC2), Simple Storage Service (S3) and DynamoDB database, which are all required by running jobs in the cloud, you should be prepared to have at least one AWS account and one credential (access key pair) in hand. 
+StochSS provides the options to run different types of jobs using the cloud infrastructures. In StochSS 1.2-1.5, the cloud services it has are all by Amazon Web Service (AWS). In order to use AWS Elastic Computing Cloud (EC2), Simple Storage Service (S3) and DynamoDB database, which are all required by running jobs in the cloud, you should be prepared to have at least one AWS account and one credential (key pair) in hand. 
 
 More information regarding how to create an AWS account or a security credential can be found here: \url{http://aws.amazon.com}
 
 \subsection{An Instructive Example on Setting Credentials}
-The StochSS will validate the credentials (access key pairs) you have to be authorized to run job in the cloud. 
+The StochSS will validate the credentials you to run job in the cloud. 
 
 An example will be shown to you on how to validate your credentials in StochSS through the following steps:
 
 \begin{figure}[!ht]
 \centering
 \includegraphics[scale=0.45]{T6_fig_credentials.png}
-\caption{`Cloud Computing' page - `Credentials' section}
+\caption{'Cloud Computing' page - 'Credentials' section}
 \label{fig:2}
 \end{figure}
 
 \begin{itemize}
-\item \textbf{Navigate} to the main \textcolor{blue}{Cloud Computing} page by \textbf{clicking} the `Cloud Computing' on the side bar.
-\item \textbf{Type in} or \textbf{copy} the access key id of your credentials in \textcolor{blue}{`Access Key'} text box.
+\item \textbf{Navigate} to the main \textcolor{blue}{Cloud Computing} page by \textbf{clicking} the ``Cloud Computing' on the side bar.
+\item \textbf{Type in} or \textbf{copy} the access key id of your credentials in \textcolor{blue}{'Access Key'} text box.
  \item \textbf{Type in} or \textbf{copy} the secret access key of your credentials in \textcolor{blue}{`Secret Key'} text box. 
- \item \textbf{Click} on the \textcolor{blue}{`Save credentials'} button to save your credentials into the database. Whenever there is no computing node running (the nodes can be seen in the `Status of VMs' section down the same page) with your current credentials, you could always change your credentials to another and save to restore them.
+ \item \textbf{Click} on the \textcolor{blue}{'Save credentials'} button to save your credentials into the database. Whenever there is no computing node running (the nodes can be seen in the 'Status of VMs' section down the same page) with your current credentials, you could always change your credentials to another and save to restore them.
  \item \textbf{Double check} the credentials are valid by seeing the message below.
 
 \end{itemize}
@@ -149,7 +150,7 @@ An example shown below will guide you on how to analyze the cost of reproduce an
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[scale=0.35]{T6_fig_costanalysis.png}
+\includegraphics[scale=0.30]{T6_fig_costanalysis.png}
 \caption{'Cost Analysis' page}
 \label{fig:2}
 \end{figure}
@@ -160,25 +161,8 @@ An example shown below will guide you on how to analyze the cost of reproduce an
 \item \textbf{Click} the \textcolor{blue}{'Cost Analysis'} button in the \textcolor{blue}{Reproduction and Cost Analysis} section.
 \item \textbf{Click} the \textcolor{blue}{'Analyze'} button with the node type you would like to run and analyze. The page will auto refresh after the request is submitted and show its status of the analysis. If the analysis remaining to be \textcolor{blue}{'active'}, \textbf{click} the \textcolor{blue}{'Refresh'} button to refresh the status.
 \item If the running is \textcolor{blue}{'finished'}, the time and money cost of running the job with the node type you chose will be plotted in the graph below for comparison.
+\item \textbf{By default}, the cost of the job run for the first time will be recorded by cost analysis automatically, so that it doesn't need to rerun for the same instance type.
 \end{itemize}
 
-
-\begin{thebibliography}{9}
-  
-  \bibitem{dan}
-  D.T. Gillespie.
-  \textit{Exact stochastic simulation of coupled chemical reactions}.
-  J. Phys. Chem., 81(25), 2340-2361 (1977)
-
-  \bibitem{sundials}
-  A. C. Hindmarsh et al.,
-  \textit{SUNDIALS: Suite of nonlinear and differential/algebraic equation solvers}.
-  ACM Trans. Math. Softw., 31(3), 363-396 (2005)
-  
-  \bibitem{nsm}
-  J. Elf and M. Ehrenberg,
-  \textit{Spontaneous separation of bi-stable biochemical systems into spatial domains of opposite phases} IEEE Systems Biology, 1, 230Ð6 (2004)
-  
-\end{thebibliography}
 
 \end{document}
